Fix: Batch delegate logs